# wsteam

./: .gitignore  Cargo.toml  Makefile  README.md
.claude/: CLAUDE.md
crates/wsteam-cli/: Cargo.toml
crates/wsteam-cli/src/: main.rs
crates/wsteam-core/: Cargo.toml
crates/wsteam-core/src/: config.rs  dxvk.rs  error.rs  ipc.rs  launcher.rs  lib.rs  prefix.rs  steam.rs  wine.rs
crates/wsteam-daemon/: Cargo.toml
crates/wsteam-daemon/src/: main.rs
scripts/: bootstrap.sh  install_dxvk.sh  install_wine.sh  setup_prefix.sh
ui/: Package.swift
ui/Sources/wsteam/: ContentView.swift  WsteamApp.swift
ui/Sources/wsteam/Engine/: WineEngine.swift
ui/Sources/wsteam/Models/: AppStore.swift  DaemonClient.swift
ui/Sources/wsteam/Views/: LibraryView.swift  SetupWizardView.swift  StatusView.swift
