[package]
name = "wsteam-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wsteam"
path = "src/main.rs"

[dependencies]
wsteam-core = { path = "../wsteam-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
