[package]
name = "wsteam-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
indicatif = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
